# RAG-for-Docs

./: .gitignore  README.md  chunkers.py  compare.py  main.py  pdf_parser.py  pyproject.toml
index/: chunks.pkl  config.json  index.faiss
src/rag/: __init__.py  ask.py  chunkers.py  compare.py  embedder.py  eval_data.py  evaluate.py  generator.py  hybrid.py  index_and_search.py  pdf_parser.py  sparse.py  vector_store.py
